--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -140,19 +140,36 @@ $peelYellow : #DAA62F;
         border-radius: 2px;
         width: 20px;
         height: 20px;
+        height: 100%;
+        .deleteTileIcon{
+          bottom: 0;
+          position: absolute;
+          right: 2px;
+          width: 20px;
+          height: 20px;
+          cursor: pointer;
+        }
+        .iconBtn{
+          background: transparent;
+          width: 20px;
+          height: 20px;
+          margin: 0;
+          padding: 0;
+          border: none;
+          min-width: 0;
+          position: absolute;
+          right: 3px;
+          top: 7px;
+        }
+        .settingsTileIcon{
+          top: 7px;
+          position: absolute;
+          right: 3px;
+          width: 20px;
+          height: 20px;
+        }
       }
-      .iconBtn{
-        background: transparent;
-        width: 20px;
-        height: 20px;
-        margin: 0;
-        padding: 0;
-        border: none;
-        min-width: 0;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-      }
+      
     }
     .Bg{
       display: block;
