--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -131,6 +131,7 @@ $peelYellow : #DAA62F;
         }
       }
       .iconBtnCntnr{
+        display: none!important;
         position: absolute;
         right: 2px;
         bottom: 0;
