--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -213,6 +213,7 @@ $peelYellow : #DAA62F;
   }
   .tileControls{
     display: block;
+    padding: 0 15px 10px 5px;
 
     &:before{
       content: "";
