--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -113,6 +113,20 @@ $peelYellow : #DAA62F;
 }
 
 
+.marginR5{
+  margin-right: 5px;
+}
+.marginR10{
+  margin-right: 10px;
+}
+.marginL5{
+  margin-left: 5px;
+}
+.marginL10{
+  margin-left: 10px;
+}
+
+
 .tileForm{
   .Fg{
     background: transparent;
