--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -273,27 +273,39 @@ $peelYellow : #DAA62F;
       display: block;
       color: #fff;
       border-radius: 2px;
-      width: 120px;
+      width: 135px;
       height: 120px;
       float: left;
       margin: 5px;
       text-align: center;
       position: relative;
       transition: all 0.3s ease;
+      &:hover .tileIcon{
+        filter: none;
+        opacity: 0.9;
+        transform: translateY(2px) translateZ(0);
+      }
       a{
         text-decoration: none;
         display: block;
         color: #fff;
-        height: 100%;
+        height: 94%;
+        padding: 7px 17px 0 13px;
         .tileIcon{
-          padding: 20px 12px 10px 12px;
+          position: absolute;
+          right: 15px;
+          bottom: 15px;
+          filter: grayscale(100%);
+          opacity: 0.3;
+          transform: translateZ(0);
+          transition: opacity 0.3s, transform 0.3s;
         }
         .tileText{
           font-size: 14px;
+          text-align: left;
         }
         i{
-          line-height: 30px;
-          font-size: 30px;
+          font-size: 35px;
         }
       }
       .iconBtnCntnr{
@@ -309,12 +321,15 @@ $peelYellow : #DAA62F;
         height: 20px;
         height: 100%;
         .deleteTileIcon{
-          bottom: 0;
+          bottom: 6px;
           position: absolute;
-          right: 2px;
-          width: 20px;
-          height: 20px;
           cursor: pointer;
+          right: 5px;
+          width: 20px;
+          height: 16px;
+          background: hsla(0,0%,100%,.3);
+          border-radius: 50%;
+          padding: 4px 2px;
         }
         .iconBtn{
           background: transparent;
@@ -332,9 +347,12 @@ $peelYellow : #DAA62F;
           cursor: pointer;
           top: 7px;
           position: absolute;
-          right: 3px;
+          right: 5px;
           width: 20px;
-          height: 20px;
+          height: 16px;
+          background: rgba(255,255,255,0.3);
+          border-radius: 50%;
+          padding: 4px 2px;
         }
       }
       
