--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -285,6 +285,20 @@ $peelYellow : #DAA62F;
         opacity: 0.9;
         transform: translateY(2px) translateZ(0);
       }
+      .tilesDpdIcon{
+        display: block;
+        &:after{
+          color: #fff;
+          content: "≡";
+          position: absolute;
+          bottom: 0px;
+          left: 47%;
+          text-align: center;
+          text-shadow: none;
+          transform: scaleX(2.5);
+          padding: 5px 0px;
+        }
+      }
       a{
         text-decoration: none;
         display: block;
