--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -285,6 +285,36 @@ $peelYellow : #DAA62F;
         opacity: 0.9;
         transform: translateY(2px) translateZ(0);
       }
+      &:hover .tilesDpd{
+        display: block;
+      }
+      .tilesDpd{
+        background: inherit;
+        z-index: 99;
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        left: 0;
+        top: 99%;
+        max-height: 250px;
+        overflow: auto;
+        border-bottom: 1px solid rgba(41,39,36,0.12);
+        box-shadow: 0px 5px 12px -2px rgba(41,39,36,0.12);
+        display: none;
+        width: 135px;
+        text-align: left;
+        li{
+          list-style-type: none;
+          border-top: 1px solid rgba(41,39,36,0.12);
+          &:hover{
+            box-shadow: none;
+            background: rgba(41,39,36,0.1);
+          }
+          a{
+            padding: 5px 7px;
+          }
+        }
+      }
       .tilesDpdIcon{
         display: block;
         &:after{
@@ -305,6 +335,7 @@ $peelYellow : #DAA62F;
         color: #fff;
         height: 94%;
         padding: 7px 17px 0 13px;
+        background: inherit;
         .tileIcon{
           position: absolute;
           right: 15px;
