--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -128,6 +128,9 @@ $peelYellow : #DAA62F;
 
 
 .tileForm{
+  .formToggle button{
+    min-width: 0;
+  }
   .Fg{
     background: transparent;
   }
@@ -164,7 +167,14 @@ $peelYellow : #DAA62F;
   bottom: 20px;
 }
 
+.tilesPanel{
+  button{
+    min-width: 0;
+  }
+}
+
 .tilesSPFx {
+ 
   .container {
     max-width: 700px;
     margin: 0px auto;
@@ -202,6 +212,8 @@ $peelYellow : #DAA62F;
   }
 
   .button {
+
+    min-width: 0;
     // Our button
     text-decoration: none;
     height: 32px;
@@ -257,6 +269,9 @@ $peelYellow : #DAA62F;
     .tilesEditToggle{
       float: right;
       margin-top: -7px;
+      button{
+        min-width: 0;
+      }
     }
   }
 
@@ -290,7 +305,7 @@ $peelYellow : #DAA62F;
       }
       .tilesDpd{
         background: inherit;
-        z-index: 99;
+        z-index: 1000000;
         position: absolute;
         margin: 0;
         padding: 0;
@@ -312,6 +327,7 @@ $peelYellow : #DAA62F;
           }
           a{
             padding: 5px 7px;
+            font-size: 13px;
           }
         }
       }
