adding preloader + resetting the sublinks dpd with 'None' instead of empty

--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -127,6 +127,10 @@ $peelYellow : #DAA62F;
 }
 
 
+.preloader{
+  margin-top: 40px;
+}
+
 .tileForm{
   .formToggle button{
     min-width: 0;
@@ -275,7 +279,7 @@ $peelYellow : #DAA62F;
     }
   }
 
-  
+
   
   .tilesCntnr{
     
