--- a/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
+++ b/src/webparts/tilesSpFx/components/TilesSpFx.module.scss
@@ -302,8 +302,16 @@ $peelYellow : #DAA62F;
     .filterTxtbox{
       width: 220px;
       margin: 0 0 10px 4px;
-      div{
+      div, input{
         border: none!important;
+      }
+      input::placeholder, input::-ms-input-placeholder{
+        color: grey;
+        opacity: 0.7;
+        font-size: 14px;
+      }
+      button{
+        min-width: 0;
       }
     }
     .tile{
